# slambook

./: CMakeLists.txt  README.md  listen1.txt
Reconstruction/class1-features_and_matching/: ReadMe  features.cpp
Reconstruction/class2-structure_from_motion/: 3d2dcoresspondence  CMakeLists.txt  PnP.cxx  ReadMe  bal_problem.cc  bal_problem.h  bundle_adjustment.cxx  essential.cxx  functions.cxx  functions.h  fundemental.cxx  homography.cxx  robust_matcher.cxx  robust_matcher.h  snavely_reprojection_error.h  triangulation.cxx
Reconstruction/class2-test_imgs1/test_imgs1/: DSC_7045.mat  DSC_7045.sift  DSC_9810.mat  DSC_9810.sift  Thumbs.db
Reconstruction/class4_code-features_and_matching/: CMakeLists.txt  bfm_matcher.cxx  features.cxx  functions.h
Reconstruction/class5-image-stiching/: CMakeLists.txt
Reconstruction/class5-image-stiching/include/: cvconfig.h
Reconstruction/class5-image-stiching/src/: precomp.hpp  stitching_detailed (另一个复件).cxx  stitching_detailed.cxx
Reconstruction/class5-image-stiching/src/PaxHeader/: stitching_detailed (另一个复件).cxx
Reconstruction/class6-mesh_generation/class6-mesh_generation/: CMakeLists.txt
Reconstruction/class6-mesh_generation/class6-mesh_generation/mesh_generation/: CMakeLists.txt
Reconstruction/class6-mesh_generation/class6-mesh_generation/mesh_generation/include/: data_type.h  igit_dataIO.h  igit_mesh_generation.h  triangle.h  vec.h
Reconstruction/class6-mesh_generation/class6-mesh_generation/mesh_generation/src/: data_type.cpp  igit_dataIO.cpp  igit_mesh_generation.cpp  triangle.cpp  vec.cpp
Reconstruction/class6-mesh_generation/class6-mesh_generation/poisson/: CMakeLists.txt
Reconstruction/class6-mesh_generation/class6-mesh_generation/poisson/src/: MultiGridOctreeData.IsoSurface.inl  MultiGridOctreeData.h  MultiGridOctreeData.inl  PoissonRecon.cpp  PoissonRecon.h  SurfaceTrimmer.cpp  surfaceTrimmer.h
Reconstruction/class6-mesh_generation/class6-mesh_generation/testing/: CMakeLists.txt  mesh_generation.cpp
Reconstruction/features_and_matching/: bfm_matcher.cpp
Reconstruction/nefu/: lunkuo.cpp
ch10/g2o_custombundle/: g2o_bundle.cpp
ch13/dense_monocular/: dense_mapping.cpp
ch2/: .CMakeLists.txt.swp
ch3/useEigen/: .CMakeLists.txt.swp  CMakeLists.txt  eigenMatrix.cpp  hw.cpp  hw.h
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp  homework.cpp  hw.cpp  hw.h
ch4/homework_L3/: CMakeLists.txt  trajectory.cpp
ch4/useSophus/: useSophus.cpp
ch5/: CMakeLists.txt
ch5/homework/: CMakeLists.txt  disparity.cpp  gaussnewton.cpp
ch5/homework_L4/: disparity.cpp  gaussnewton.cpp  undistort_image.cpp
ch5/imageBasics/: imageBasics.cpp
ch5/joinMap/: CMakeLists.txt  joinMap.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/: main.cpp
ch7/: CMakeLists.txt  LK_pose_estimation_3d2d.cpp  feature_extration.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
ch8/LKFlow/: CMakeLists.txt  LK.cpp  useLK  useLK.cpp
ch8/directMethod/: direct_semidense.cpp
features_and_matching/: CMakeLists.txt  ReadMe  features.cpp  features.cxx  functions.cpp  knn_matcher.cpp
features_and_matching/pic/: Thumbs.db
homework/homework_L1/doc/: hw1.md
homework/homework_L1/include/: hello.h
homework/homework_L2/: CMakeLists.txt  hw2.cpp  hw3.cpp
homework/homework_L2/doc/: hw2.md
homework/homework_L3/: draw_trajectory.cpp  trajectory.cpp
homework/homework_L3/doc/: hw.md  hw3.md
homework/homework_L4/: CMakeLists.txt  disparity.cpp
homework/homework_L4/doc/: hw4.md
homework/homework_L5/: CMakeLists.txt  E2Rt.cpp  GN-BA.cpp  computeORB.cpp
homework/homework_L5/doc/: hw5.md
homework/homework_L6/: CMakeLists.txt  ReadM.md  direct_method.cpp  motionToColor.cpp  my_optical_flow.cpp  optical_flow.cpp  test.cpp
homework/homework_L6/other/: CMakeLists.txt  myoptical_flow.cpp
liyubo/: CMakeLists.txt  useHello.cpp
liyubo/src/: hello.cpp
papers/: Past, Present, and Future of Simultaneous Localization And Mapping: Towards the Robust-PerceptionAge.md  VisualSimultaneousLocalizationandMapping: ASurvey.md
project/0.1/include/myslam/: camera.h  common_include.h  config.h  frame.h  map.h  mappoint.h
project/0.1/src/: camera.cpp
project/0.2/: CMakeLists.txt
project/0.2/config/: default.yaml
project/0.2/include/myslam/: camera.h  config.h  frame.h  map.h  visual_odometry.h
project/0.2/src/: camera.cpp  config.cpp  visual_odometry.cpp
project/0.2/test/: run_vo.cpp
project/0.4/: CMakeLists.txt
project/0.4/config/: default.yaml
project/0.4/include/myslam/: frame.h  mappoint.h  visual_odometry.h
project/0.4/src/: config.cpp  frame.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
project/0.4/test/: run_vo.cpp
